<resources>
    <string name="app_name">OLAPark</string>
    <string name="mail">Email address</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_email">Change Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel_edit_profile">Cancel</string>
    <string name="save_edit_profile">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="forgetten_password">Forgotten password?</string>

    <string name="automatic_payment">Automatic Payment</string>
    <string name="night_mode">Night Mode</string>

    <string name="menu_parks">Parks</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_report">Report</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_settings">Settings</string>

    <string name="report_question">What are you reporting?</string>
    <string name="report_description">Description</string>

    <string name="logout_question">Do you want to leave OLAPark?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="claim">Claim</string>

    <string name="payments_col_number">Number</string>
    <string name="payments_col_park">Park</string>
    <string name="payments_col_date">Date</string>
    <string name="payments_col_value">Value</string>

    <string name="profile_col_car_plate">Plate</string>
    <string name="profile_col_car">Car</string>

    <string name="modal_add_card_choose">Choose</string>
    <string name="modal_add_card_cancel">Cancel</string>
    <string name="modal_add_card_loading_image">Loading Image</string>
    <string name="modal_add_card_camera">Camera</string>
    <string name="modal_add_card_gallery">Gallery</string>

    <string-array name="report_options">
        <item>Bad Parking</item>
        <item>Theft</item>
        <item>Accident</item>
        <item>Beggars</item>
    </string-array>

    <string name="title_activity_profile">Profile</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="euros"> € </string>
    <string name="balance"> Balance </string>
    <string name="add_money">Cash Deposit</string>
    <string name="raise_money"> Raise Cash </string>
    <string name="payment_history">Check Payment History</string>

    <string name="deposit"> Deposit </string>
    <string name="deposit_value"> Deposit Amount</string>
    <string name="deposit_warning"> Deposit an amount slightly higher than what you plan to spend </string>
    <string name="deposit_error"> The amount must be more than 5 euros </string>

    <string name="raise"> Raise </string>
    <string name="raise_value"> Raise Amount </string>
    <string name="raise_warning"> Withdraw money from your own balance </string>
    <string name="raise_error"> The amount must be less or equal to your current balance </string>

    <string name="user_information"> User Information </string>
    <string name="user_username">Username:</string>
    <string name="user_email">Email:</string>
    <string name="user_phone">Phone:</string>
    <string name="user_payment_method"> Payment Method:</string>
    <string name="add_payment_method"> Add Payment Method</string>
    <string name="add_car"> Add Car </string>

    <string name="first_reward"> 25% discount in next payment </string>
    <string name="second_reward"> 50% discount in next payment </string>
    <string name="third_reward"> Free parking </string>

    <string name="raining_message"> It looks like it\'s raining! Just want to see indoor parks? </string>

    <string name="entry_date"> Entry date </string>
    <string name="departure_date"> Departure date </string>
    <string name="day_date"> Day </string>
    <string name="hour_date"> Hour </string>
    <string name="total_price"> Total price - </string>
    <string name="submit"> Submit </string>

</resources>