<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav.payments.RaiseMoneyFragment">

    <Button
        android:id="@+id/raise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/raise"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/raise_form"
        android:layout_width="309dp"
        android:layout_height="293dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/payments_features_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/raise_euros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="88dp"
        android:text="@string/euros"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/raise_form"
        app:layout_constraintTop_toBottomOf="@+id/raise_value" />

    <TextView
        android:id="@+id/raise_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/raise_value"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/raise_warning"
        android:layout_width="222dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/raise_warning"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raise_amount" />

    <EditText
        android:id="@+id/raise_amount"
        android:layout_width="111dp"
        android:layout_height="57dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="right"
        android:hint="0"
        android:inputType="number"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/raise_form"
        app:layout_constraintTop_toBottomOf="@+id/raise_value" />

    <TextView
        android:id="@+id/raise_error"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:text="@string/raise_error"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/raise_warning"
        app:layout_constraintEnd_toEndOf="@+id/raise_form"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/raise_form" />


</androidx.constraintlayout.widget.ConstraintLayout>