<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/orange"
    tools:context=".RegisterActivity">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="163dp"
      android:layout_height="165dp"
      android:layout_marginStart="108dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="108dp"
      android:layout_marginBottom="284dp"
      android:contentDescription="@string/app_name"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/logo" />

  <EditText
      android:id="@+id/confirm_password"
      android:layout_width="300dp"
      android:layout_height="48dp"
      android:layout_marginStart="108dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="108dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/confirm_password"
      android:inputType="textPassword"
      android:textColorHint="@color/black"
      android:textColor="@color/black"
      android:background="@drawable/edit_text_box_style"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:drawableStart="@drawable/ic_baseline_lock_24"
      android:drawablePadding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/new_password" />

  <EditText
      android:id="@+id/new_phone"
      android:layout_width="298dp"
      android:layout_height="48dp"
      android:layout_marginStart="108dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="108dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/phone_number"
      android:inputType="phone"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      android:background="@drawable/edit_text_box_style"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:drawableStart="@drawable/ic_baseline_phone_24"
      android:drawablePadding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/new_username"
      tools:text="@string/phone_number" />

  <EditText
      android:id="@+id/new_password"
      android:layout_width="298dp"
      android:layout_height="48dp"
      android:layout_marginStart="108dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="108dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      android:background="@drawable/edit_text_box_style"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:drawableStart="@drawable/ic_baseline_lock_24"
      android:drawablePadding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/new_phone" />

  <EditText
      android:id="@+id/new_username"
      android:layout_width="298dp"
      android:layout_height="48dp"
      android:layout_marginStart="108dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="108dp"
      android:autofillHints=""
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/username"
      android:textColor="@color/black"
      android:textColorHint="@color/black"
      android:background="@drawable/edit_text_box_style"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:drawableStart="@drawable/ic_baseline_person_24"
      android:drawablePadding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/new_email" />

  <EditText
      android:id="@+id/new_email"
      android:layout_width="298dp"
      android:layout_height="48dp"
      android:layout_marginStart="108dp"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="108dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/mail"
      android:inputType="textEmailAddress"
      android:textColorHint="@color/black"
      android:textColor="@color/black"
      android:background="@drawable/edit_text_box_style"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:drawableStart="@drawable/ic_baseline_email_24"
      android:drawablePadding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <Button
      android:id="@+id/new_register"
      android:layout_width="295dp"
      android:layout_height="48dp"
      android:layout_marginTop="40dp"
      android:backgroundTint="?attr/colorPrimary"
      android:text="@string/register"
      android:textColor="#000000"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>